--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>TREE.js</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>THIS IS A BEAUT: <a href="demo.html">DEMO</a></p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
